--- a/public/HotSeat.html
+++ b/public/HotSeat.html
@@ -4,6 +4,7 @@
     <title>Hot Seat</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Rock+Salt|Shadows+Into+Light+Two" rel="stylesheet">
+    <script src="bundle.js" defer></script>
 </head>
 
 <body>
